overflow scroll added to #my-schools div. added .path function to app.js to prevent page reload, url changes but icons do not refresh yet

--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -34,6 +34,7 @@ body {
     /*padding: 20px;*/
     max-height: 700px;
     font-family: 'Roboto', sans-serif;
+    overflow: scroll;
 }
 
 #my-schools h3 {
